
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {TYPE_1__* priv_data; } ;
struct TYPE_5__ {int riff_end; } ;
typedef int AVIOContext ;
typedef TYPE_1__ AVIContext ;
typedef TYPE_2__ AVFormatContext ;


 int AVERROR_INVALIDDATA ;
 int AV_LOG_INFO ;
 int av_log (TYPE_2__*,int ,char*) ;
 scalar_t__** avi_headers ;
 int avio_read (int *,char*,int) ;
 int avio_rl32 (int *) ;
 scalar_t__ avio_tell (int *) ;
 int memcmp (char*,scalar_t__*,int) ;

__attribute__((used)) static int get_riff(AVFormatContext *s, AVIOContext *pb)
{
    AVIContext *avi = s->priv_data;
    char header[8] = {0};
    int i;


    avio_read(pb, header, 4);
    avi->riff_end = avio_rl32(pb);
    avi->riff_end += avio_tell(pb);
    avio_read(pb, header + 4, 4);

    for (i = 0; avi_headers[i][0]; i++)
        if (!memcmp(header, avi_headers[i], 8))
            break;
    if (!avi_headers[i][0])
        return AVERROR_INVALIDDATA;

    if (header[7] == 0x19)
        av_log(s, AV_LOG_INFO,
               "This file has been generated by a totally broken muxer.\n");

    return 0;
}
